Revision history for DBIx::Class

        - added stacktrace option to Schema, makes throw_exception
          use "confess"
        - make database handles use throw_exception by default
        - make database handles supplied by a coderef use our
          standard HandleError/RaiseError/PrintError
        - add "unsafe" connect_info option to suppress our setting
          of HandleError/RaiseError/PrintError
        - removed several redundant evals whose sole purpose was to
          provide extra debugging info
        - fixed page-within-page bug (reported by nilsonsfj)
        - fixed rare bug when database is disconnected inbetween
          "$dbh->prepare_cached" and "$sth->execute"

0.07999_05 2007-06-07 23:00:00
        - Made source_name rw in ResultSource
        - Fixed up SQL::Translator test/runtime dependencies
        - Fixed t/60core.t in the absence of DateTime::Format::MySQL
        - Test cleanup and doc note (ribasushi)

0.07999_04 2007-06-01 14:04:00
        - pulled in Replication storage from branch and marked EXPERIMENTAL
        - fixup to ensure join always LEFT after first LEFT join depthwise
        - converted the vendor tests to use schema objects intead of schema
          classes, made cleaned more reliable with END blocks
        - versioning support via DBIx::Class::Schema::Versioned
        - find/next now return undef rather than () on fail from Bernhard Graf
        - rewritten collapse_result to fix prefetch
        - moved populate to resultset
        - added support for creation of related rows via insert and populate
        - transaction support more robust now in the face of varying AutoCommit
          and manual txn_begin usage
        - unbreak back-compat for Row/ResultSet->new_result
        - Added Oracle/WhereJoins.pm for Oracle >= 8 to support
          Oracle <= 9i, and provide Oracle with a better join method for
          later versions.  (I use the term better loosely.)